deploy/app/overlays/local/patch-backend-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: api
          image: docker.io/thorlin/demo-backend-server@sha256:d3cb6b5369b69b583cedef17e402a2a699a36ae6c6f3c5847df1c4bc5c5699a5
          imagePullPolicy: Always
          # imagePullPolicy: IfNotPresent
