deploy/app/overlays/local/patch-frontend-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: web
          image: docker.io/thorlin/demo-frontend:latest
          imagePullPolicy: Always
          # imagePullPolicy: IfNotPresent
