deploy/app/overlays/local/patch-api-httproute-hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  hostnames:
  - api.thorlinlab.cc
