deploy/app/overlays/local/patch-app-httproute-hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  hostnames:
  - app.thorlinlab.cc
